RESULTS/AutoSpec/raw_results/out-4o-sv-comp/0019_0002/0019_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/0019_0002/0019_merged.c:38:3: error: unterminated comment
   38 |   /*@;
      |   ^
